:construction: affair、calendar、course、declare、dialog、discover 改进 build.gradle & discover 取消依赖 common

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,7 +59,10 @@ lottie = "6.6.0"
 photoView = "2.3.0"
 # https://github.com/985892345/NetLayout
 # 20 级郭祥瑞封装的课表底层控件，如果有问题，欢迎来联系 👀
-netlayout = "1.1.1-SNAPSHOT"
+netLayout = "1.1.1-SNAPSHOT"
+# https://github.com/985892345/SlideShow
+# 20 级郭祥瑞封装的 Banner 库，如果有问题，欢迎来联系 👀
+slideShow = "2.0.1"
 # https://github.com/scwang90/SmartRefreshLayout
 smartRefreshLayout = "2.1.0"
 # https://github.com/afollestad/material-dialogs
@@ -67,6 +70,9 @@ dialog = "3.3.0" # 作者已停止维护
 # https://github.com/AigeStudio/WheelPicker
 # 一个滚轮选择器
 wheelPicker = "1.1.3"
+# https://github.com/wangjiegulu/WheelView
+# 有是一个滚轮选择器（为什么会有多个？我也不知道，但这个 17 年后就没维护了）
+wheelView = "4.1.9"
 
 ####################################################################################################
 #                                              Kotlin
@@ -116,11 +122,11 @@ okhttp = "4.12.0"
 # https://github.com/google/gson
 gson = "2.11.0"
 # https://github.com/ReactiveX/RxJava
-rxjava3 = "3.1.9"
+rxjava = "3.1.9"
 # https://github.com/ReactiveX/RxAndroid
-rxjava3-android = "3.0.2"
+rxjava-android = "3.0.2"
 # https://github.com/ReactiveX/RxKotlin
-rxjava3-kotlin = "3.0.1"
+rxjava-kotlin = "3.0.1"
 # https://github.com/tbruyelle/RxPermissions
 rxpermissions = "0.12" # 作者 20 年已停止维护
 # https://github.com/square/leakcanary
@@ -130,6 +136,9 @@ pandora = "androidx_v2.1.0"
 # https://help.aliyun.com/document_detail/434554.html?spm=a2c4g.435252.0.0.1da95979yyEzm3
 # 阿里云httpdns依赖
 alicloud-httpdns = "2.3.2"
+# https://github.com/mozilla/rhino
+# js 引擎，支持与 java 直接进行交互
+rhino = "1.7.15"
 
 [libraries]
 ####################################################################################################
@@ -154,8 +163,11 @@ android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref 
 androidx-databinding = { module = "androidx.databinding:databinding-runtime", version.ref = "androidx-databinding" }
 androidx-databinding-ktx = { module = "androidx.databinding:databinding-ktx", version.ref = "androidx-databinding" }
 androidx-paging = { module = "androidx.paging:paging-runtime", version.ref = "androidx-paging" }
-androidx-paging-rxjava3 = { module = "androidx.paging:paging-runtime-rxjava3", version.ref = "androidx-paging" }
+androidx-paging-rxjava = { module = "androidx.paging:paging-runtime-rxjava3", version.ref = "androidx-paging" }
 androidx-room = { module = "androidx.room:room-runtime", version.ref = "androidx-room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
+androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "androidx-room" }
+androidx-room-rxjava = { module = "androidx.room:room-rxjava3", version.ref = "androidx-room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
 androidx-work = { module = "androidx.work:work-runtime-ktx", version.ref = "androidx-work" }
 
@@ -170,10 +182,12 @@ androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefre
 material = { module = "com.google.android.material:material", version.ref = "material" }
 flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
-netlayout = { module = "io.github.985892345:NetLayout", version.ref = "netlayout" }
+netLayout = { module = "io.github.985892345:NetLayout", version.ref = "netLayout" }
+slideShow = { module = "io.github.985892345:SlideShow", version.ref = "slideShow" }
 photoView = { module = "com.github.chrisbanes:PhotoView", version.ref = "photoView" }
 dialog = { module = "com.afollestad.material-dialogs:core", version.ref = "dialog" }
 wheelPicker = { module = "cn.aigestudio.wheelpicker:WheelPicker", version.ref = "wheelPicker" }
+wheelView = { module = "com.github.gzu-liyujiang.AndroidPicker:WheelView", version.ref = "wheelView" }
 smartRefreshLayout = { module = "io.github.scwang90:refresh-layout-kernel", version.ref = "smartRefreshLayout" }
 smartRefreshLayout-header-classics = { module = "io.github.scwang90:refresh-header-classics", version.ref = "smartRefreshLayout" }      # 经典刷新头
 smartRefreshLayout-header-radar = { module = "io.github.scwang90:refresh-header-radar", version.ref = "smartRefreshLayout" }            # 雷达刷新头
@@ -214,6 +228,7 @@ rxpermissions = { module = "com.github.tbruyelle:rxpermissions", version.ref = "
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }      # 内存泄漏
 pandora = { module = "com.github.whataa:pandora", version.ref = "pandora" }         # 很牛逼的 debug 检测工具，debug 模式下摇一摇手机或者按三次手机中间顶部区域触发
 alicloud-httpdns = { module = "com.aliyun.ams:alicloud-android-httpdns", version.ref = "alicloud-httpdns" }     # 阿里云httpdns依赖
+rhino = { module = "org.mozilla:rhino", version.ref = "rhino" }         # js 引擎，支持与 java 直接进行交互
 
 ####################################### 公有依赖，大部分模块使用 #######################################
 arouter = { module = "com.alibaba:arouter-api", version.ref = "arouter" }
@@ -225,14 +240,14 @@ glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" } # todo 待移除
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
-retrofit-converter-kotlinx-serialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
-retrofit-adapter-rxjava3 = { module = "com.squareup.retrofit2:adapter-rxjava3", version.ref = "retrofit" }
+retrofit-converter-kotlinxSerialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
+retrofit-adapter-rxjava = { module = "com.squareup.retrofit2:adapter-rxjava3", version.ref = "retrofit" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-rxjava3 = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava3" }
-rxjava3-android = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxjava3-android" }
-rxjava3-kotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxjava3-kotlin" }
+rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
+rxjava-android = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxjava-android" }
+rxjava-kotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxjava-kotlin" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -266,9 +281,9 @@ projectBase = [
     "kotlinx-collections",
     "kotlinx-serialization", # 想要序列化还需要引入 kotlin-serialization 插件
     # rxjava 所有模块都需要
-    "rxjava3",
-    "rxjava3-android",
-    "rxjava3-kotlin",
+    "rxjava",
+    "rxjava-android",
+    "rxjava-kotlin",
     # 路由及服务提供所有模块都需要
     "arouter",
     "autoService"
@@ -292,9 +307,9 @@ network = [
     "okhttp",
     "retrofit",
     "gson",
-    "rxjava3",
-    "rxjava3-android",
-    "rxjava3-kotlin",
+    "rxjava",
+    "rxjava-android",
+    "rxjava-kotlin",
 ]
 
 # 比较出名的刷新控件 https://github.com/scwang90/SmartRefreshLayout
