--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,21 @@
-# 写在这里的目的是为了让整个项目的 build.gradle.kts 和 build_-ogic 的都能统一设置版本号
-# 如果是只有模块使用的话，建议写在 build-logic/core/versions/ 里面，一定要写好对应依赖的链接!!!
+# 留给后人：
+# 掌邮的依赖建议每隔一年就升级一次，对于升级的方式有以下两种：
+## 1、Gradle Dependency Updates 插件
+# AS 下载 Gradle Dependency Updates 插件，插件主页：https://plugins.jetbrains.com/plugin/14243-gradle-dependency-updates
+#
+# 该插件会自动检查所有模块的依赖版本，比较智能
+#
+## 2、手动查询
+# - 每个依赖我都贴心的给出了官网地址，可以快速查到最新版本号
+# - 也可以在该网站中寻找到所有仓库的依赖：https://mvnrepository.com/
+#
+#  注意：
+# - 如果你要添加其他依赖，请贴出官网地址，方便后人查找
+# - 依赖一定要经常升级，不然到后面一起升很麻烦
+#
+# @author 985892345
+# @date 2024/11/17 18:52
+
 
 [versions]
 javaTarget = "11" # 17 目前 R8 还不支持 sealed，暂时不升级
