--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,13 +38,13 @@ androidx-core-animation = "1.0.0"
 # https://developer.android.com/kotlin/ktx/extensions-list#androidxcollection
 androidx-collection-ktx = "1.4.5"
 # https://developer.android.com/jetpack/androidx/releases/fragment
-androidx-fragment-ktx = "1.8.5"
+androidx-fragment = "1.8.5"
 # https://developer.android.com/jetpack/androidx/releases/activity
-androidx-activity-ktx = "1.9.3"
+androidx-activity = "1.9.3"
 # https://mvnrepository.com/artifact/androidx.databinding/databinding-runtime
 androidx-databinding = "8.7.3"
 # https://developer.android.com/jetpack/androidx/releases/paging
-androidx-paging = "3.3.4"
+androidx-paging = "3.3.5"
 # https://developer.android.com/jetpack/androidx/releases/room
 androidx-room = "2.6.1"
 # https://developer.android.com/jetpack/androidx/releases/work
@@ -103,6 +103,25 @@ kotlinx-coroutines = "1.9.0"
 kotlinx-collections = "0.3.8"
 # https://github.com/Kotlin/kotlinx.serialization
 kotlinx-serialization = "1.7.3"
+# https://github.com/Kotlin/kotlinx-datetime
+kotlinx-Datetime = "0.6.1"
+########################################### KMP 第三方依赖 ###########################################
+# https://github.com/eygraber/uri-kmp
+kmp-uri = "0.0.18"
+# https://github.com/985892345/KtProvider
+kmp-ktProvider = "1.4.0" # 985892345 的 kt 多平台跨模块服务提供框架
+# https://github.com/russhwolf/multiplatform-settings
+kmp-settings = "1.3.0"
+
+
+####################################################################################################
+#                                              Compose
+####################################################################################################
+# https://github.com/JetBrains/compose-multiplatform/releases
+compose-multiplatform = "1.7.0"
+# https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html#setup
+# 官网文档可能更新不及时，版本请看 compose 发布时给出的版本
+compose-navigation = "2.8.0-alpha11"
 
 ####################################################################################################
 #                                               三方库
@@ -159,7 +178,6 @@ alicloud-httpdns = "2.5.0"
 rhino = "1.7.15"
 
 
-
 [libraries]
 ####################################################################################################
 #                                              Android
@@ -175,8 +193,9 @@ androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-lived
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
 androidx-core-animation = { module = "androidx.core:core-animation", version.ref = "androidx-core-animation" }
 androidx-collection-ktx = { module = "androidx.collection:collection-ktx", version.ref = "androidx-collection-ktx" }
-androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment-ktx" }
-androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity-ktx" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 
 ######################################## 特殊依赖，少量模块引入 ########################################
 android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
@@ -226,9 +245,26 @@ ksp-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.re
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-rx3 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx3", version.ref = "kotlinx-coroutines" }                # 包含 Flow 与 Rxjava3 的互转
 kotlinx-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections" }
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+kotlinx-serialization-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+########################################### KMP 第三方依赖 ###########################################
+kmp-uri = { module = "com.eygraber:uri-kmp", version.ref = "kmp-uri" }
+kmp-settings-core = { module = "com.russhwolf:multiplatform-settings", version.ref = "kmp-settings" }
+kmp-settings-noArg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "kmp-settings" }
+kmp-settings-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "kmp-settings" }
+kmp-settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "kmp-settings" }
+kmp-ktProvider-gradlePlugin = { module = "io.github.985892345:provider-plugin-gradle", version.ref = "kmp-ktProvider" }
+kmp-ktProvider-manager = { module = "io.github.985892345:provider-manager", version.ref = "kmp-ktProvider" }
+
+####################################################################################################
+#                                              Compose
+####################################################################################################
+compose-gradlePlugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-multiplatform" }
+compose-compiler-gradlePlugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" }
+compose-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
 
 ####################################################################################################
 #                                               三方库
@@ -270,11 +306,13 @@ rxjava-android = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxj
 rxjava-kotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxjava-kotlin" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-android-library = { id = "com.android.library", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlinCompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 vasdolly = { id = "com.tencent.vasdolly" }
 
