:wastebasket: 取消 module_calendar 模块，其中 CalendarActivity 移动到 module_discover 模块

--- a/module_discover/src/androidMain/AndroidManifest.xml
+++ b/module_discover/src/androidMain/AndroidManifest.xml
@@ -7,6 +7,8 @@
             android:name=".pages.RollerViewActivity"
             android:usesCleartextTraffic="true"
              />
+        <activity android:name=".pages.calendar.CalendarActivity"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
