:bricks: 添加多平台开关

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,8 @@ android.injected.testOnly=false
 
 # AGP8 后默认开启 R8 的全量模式，会导致泛型在源文件中也被擦除
 android.enableR8.fullMode=false
+
+
+cyxbs.multiplatform.ios=false
+cyxbs.multiplatform.wasm=false
+cyxbs.multiplatform.desktop=false
