:bricks: news 模块去除对 common 模块的依赖

--- a/lib_common/src/androidMain/AndroidManifest.xml
+++ b/lib_common/src/androidMain/AndroidManifest.xml
@@ -18,7 +18,7 @@
 <!--            android:theme="@android:style/Theme.Translucent" />-->
 
         <activity
-            android:name=".component.PhotoViewerActivity"
+            android:name="com.cyxbs.pages.news.ui.activity.PhotoViewerActivity"
             android:launchMode="singleInstance" />
 
     </application>
