:wastebasket: 移除 lib_protocol 模块，用户协议与隐私权政策页面移动至 login 模块

--- a/cyxbs-pages/login/src/androidMain/AndroidManifest.xml
+++ b/cyxbs-pages/login/src/androidMain/AndroidManifest.xml
@@ -3,8 +3,11 @@
 
     <application>
         <activity
-            android:name="com.cyxbs.pages.login.login.ui.LoginActivity"
+            android:name=".login.ui.LoginActivity"
             android:launchMode="singleTask" />
+        <activity
+            android:name=".ui.LegalNoticeActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
