--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,8 +96,8 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: result_apk
-          path: module_app/build/outputs/apk/release/module_app-release.apk
+          name: CyxbsMobile-test.apk
+          path: cyxbs-applications/test/build/outputs/apk/release/test-release-unsigned.apk
           retention-days: 15
           
   send_message:
