:sparkles: 添加 desktop 和 wasmJs 运行方式，目前还在实验阶段
- gradle.properties 中配置 desktop 和 wasm 开启即可开启
- 降低至kt2.0.21，因为 wasm 部分 npm 依赖无法拉取
- 部分第三方库在 wasm 下无法拉取，详看 kmp.base.gradle.kts

--- a/cyxbs-pages/discover/src/androidMain/AndroidManifest.xml
+++ b/cyxbs-pages/discover/src/androidMain/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <application>
         <activity android:name=".pages.calendar.CalendarActivity"/>
+        <activity android:name=".pages.RollerViewActivity" />
     </application>
 
 </manifest>
