--- a/gradle.properties
+++ b/gradle.properties
@@ -51,4 +51,4 @@ android.enableR8.fullMode=false
 
 cyxbs.multiplatform.ios=false
 cyxbs.multiplatform.wasm=false
-cyxbs.multiplatform.desktop=true
+cyxbs.multiplatform.desktop=false
