--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -85,16 +85,16 @@ dialog = "3.3.0" # 作者已停止维护
 # 一个滚轮选择器
 wheelPicker = "1.1.3"
 # https://github.com/wangjiegulu/WheelView
-# 有是一个滚轮选择器（为什么会有多个？我也不知道，但这个 17 年后就没维护了）
+# 又一个滚轮选择器（为什么会有多个？我也不知道，但这个 17 年后就没维护了）
 wheelView = "4.1.9"
 
 ####################################################################################################
 #                                              Kotlin
 ####################################################################################################
 # https://github.com/JetBrains/kotlin/releases
-kotlin = "2.1.0"
+kotlin = "2.0.21"
 # https://github.com/google/ksp/releases
-ksp = "2.1.0-1.0.29" # ksp 版本与 kotlin 版本强绑定，升级 kotlin 记得去更 ksp
+ksp = "2.0.21-1.0.28" # ksp 版本与 kotlin 版本强绑定，升级 kotlin 记得去更 ksp
 # https://github.com/Kotlin/kotlinx.coroutines
 kotlinx-coroutines = "1.9.0"
 # https://github.com/Kotlin/kotlinx.collections.immutable
@@ -102,12 +102,12 @@ kotlinx-collections = "0.3.8"
 # https://github.com/Kotlin/kotlinx.serialization
 kotlinx-serialization = "1.7.3"
 # https://github.com/Kotlin/kotlinx-datetime
-kotlinx-Datetime = "0.6.1"
+kotlinx-datetime = "0.6.1"
 ########################################### KMP 第三方依赖 ###########################################
 # https://github.com/eygraber/uri-kmp
 kmp-uri = "0.0.18"
 # https://github.com/985892345/KtProvider
-kmp-ktProvider = "1.4.0" # 985892345 的 kt 多平台跨模块服务提供框架
+kmp-ktProvider = "1.4.1" # 985892345 的 kt 多平台跨模块服务提供框架
 # https://github.com/russhwolf/multiplatform-settings
 kmp-settings = "1.3.0"
 
@@ -116,13 +116,13 @@ kmp-settings = "1.3.0"
 #                                              Compose
 ####################################################################################################
 # https://github.com/JetBrains/compose-multiplatform/releases
-compose-multiplatform = "1.7.0"
+compose-multiplatform = "1.7.3"
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html#setup
 # 官网文档可能更新不及时，版本请看 compose 发布时给出的版本
 compose-navigation = "2.8.0-alpha11"
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-lifecycle.html
 # 看 compose 发布时给出的版本
-compose-lifecycle = "2.9.0-alpha01"
+compose-lifecycle = "2.8.4"
 
 ####################################################################################################
 #                                               三方库
@@ -242,6 +242,7 @@ kotlinx-coroutines-rx3 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx
 kotlinx-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections" }
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-serialization-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 ########################################### KMP 第三方依赖 ###########################################
 kmp-uri = { module = "com.eygraber:uri-kmp", version.ref = "kmp-uri" }
 kmp-settings-core = { module = "com.russhwolf:multiplatform-settings", version.ref = "kmp-settings" }
