:art: 优化 login 模块 compose 代码

--- a/cyxbs-pages/login/src/androidMain/AndroidManifest.xml
+++ b/cyxbs-pages/login/src/androidMain/AndroidManifest.xml
@@ -4,7 +4,9 @@
     <application>
         <activity
             android:name=".login.ui.LoginActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden|mnc|colorMode|density|fontScale|fontWeightAdjustment|keyboard|layoutDirection|locale|mcc|navigation|smallestScreenSize|touchscreen|uiMode"
+            />
         <activity
             android:name=".ui.LegalNoticeActivity"
             android:exported="false" />
