:building_construction: 新增 view 模块，用于分离 config 模块中控件相关，解决自定义 View 需要依赖 utils 模块的问题

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: CyxbsMobile-test.apk
+          name: CyxbsMobile-test
           path: cyxbs-applications/test/build/outputs/apk/release/test-release-unsigned.apk
           retention-days: 15
           
