--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,9 +94,9 @@ jobs:
         run: ./gradlew assembleRelease
 
       - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: CyxbsMobile-test.apk
+          name: CyxbsMobile-test
           path: cyxbs-applications/test/build/outputs/apk/release/test-release-unsigned.apk
           retention-days: 15
           
