--- a/gradle.properties
+++ b/gradle.properties
@@ -49,6 +49,6 @@ android.injected.testOnly=false
 android.enableR8.fullMode=false
 
 # 这里默认关闭，可以在 local.properties 覆盖打开配置
-cyxbs.multiplatform.ios=false
+cyxbs.multiplatform.ios=true
 cyxbs.multiplatform.wasm=false
 cyxbs.multiplatform.desktop=true # 只有一个平台时 commonMain 可以调用安卓代码，所以这里建议至少开启一个
